[package]
name = "grpc_test"
version = "0.1.0"
authors = ["Joseph Murphy <air.jmurph@gmail.com>"]

[dependencies]
grpc                = "0.*"
protobuf            = "1.5"
futures             = "0.1"
futures-cpupool     = "0.1"
antidote            = "1.0"
httpbis             = "0.5"
tls-api             = "0.1"
tls-api-native-tls  = "0.1"

[build-dependencies]
protoc-rust-grpc    = "0.3.0"